Fix layout of the "Solve Conflicts" modal (#1470)
* Fix: misaligned buttons in the doc conflicts confirmation modal

* Fix: npm audit failures

* Fix: bump Node used in CI to 20 to address failure with latest 'npm'

--- a/app/addons/documents/assets/scss/revision-browser.scss
+++ b/app/addons/documents/assets/scss/revision-browser.scss
@@ -142,7 +142,12 @@ div#dashboard-content div.revision-wrapper {
 }
 
 .delete-conflicts-modal {
-  .do-not-show-again label {
-    font-size: 13px;
+  .do-not-show-again {
+    &.form-check {
+      padding-left: 2em;
+    }
+    label {
+      font-size: 13px;
+    }
   }
 }
